# atlas-generator

./: .gitignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  bun.lockb  package.json
.github/workflows/: ci.yaml  release.yaml
__tests__/: index.spec.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
