[package]
name = "atlas-generator"
authors = ["Alessio Marchi<alessiomarchi.dev@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "2.14.0"
napi-derive = "2.14.0"

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
opt-level = "z"
